--- a/_image.scss
+++ b/_image.scss
@@ -18,6 +18,7 @@ $bits-utils-ns: 'bits-' !default; /* 1 */
 
 .#{$bits-utils-ns}u-ir {
   background-color: transparent;
+  background-repeat: no-repeat;
   border: 0;
   overflow: hidden;
 }
