--- a/_image.scss
+++ b/_image.scss
@@ -18,7 +18,7 @@ $bits-utils-ns: 'bits-' !default; /* 1 */
  * Image replacement technique, see http://bit.ly/NgnSfH for details.
  */
 
-.#{$bits-utils-ns}u-ir {
+.#{$bits-utils-ns}u-imageReplace {
   overflow: hidden !important;
   background-color: transparent !important;
   background-repeat: no-repeat !important;
@@ -30,7 +30,7 @@ $bits-utils-ns: 'bits-' !default; /* 1 */
  * removed or the height needs to be bumped up (e.g., set to 200%).
  */
 
-.#{$bits-utils-ns}u-ir:before {
+.#{$bits-utils-ns}u-imageReplace:before {
   content: "";
   display: block;
   width: 0;
