Use new style for comments

--- a/_image.scss
+++ b/_image.scss
@@ -2,17 +2,17 @@
    Image utilities
    ========================================================================== */
 
+/* Variables
+   ========================================================================== */
+
 /**
- * Variables
- *
- * It is recommended to override these.
- *
- * 1. Utility namespace.
+ * Bits.sass utilities namespace
  */
 
-$bits-utils-ns: 'bits-' !default; /* 1 */
+$bits-utils-ns: 'bits-' !default;
 
-/* -------------------------------------------------------------------------- */
+/* Utilities
+   ========================================================================== */
 
 /**
  * Image replacement technique, see http://bit.ly/NgnSfH for details.
@@ -38,8 +38,6 @@ $bits-utils-ns: 'bits-' !default; /* 1 */
   width: 0;
   height: 150%;
 }
-
-/* -------------------------------------------------------------------------- */
 
 /**
  * Responsive image
